2ee/LogicaParser.py
# Generated from Logica.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class LogicaParser ( Parser ):

    grammarFileName = "Logica.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'all'", "','", "'some'", "'->'", "'not'", 
                     "'and'", "'('", "')'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "VAR", "CONST", "PRED", "WS" ]

    RULE_formula = 0
    RULE_exp = 1

    ruleNames =  [ "formula", "exp" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    VAR=9
    CONST=10
    PRED=11
    WS=12

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class FormulaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return LogicaParser.RULE_formula

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class ImpliesContext(FormulaContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LogicaParser.FormulaContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def formula(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LogicaParser.FormulaContext)
            else:
                return self.getTypedRuleContext(LogicaParser.FormulaContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterImplies" ):
                listener.enterImplies(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitImplies" ):
                listener.exitImplies(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitImplies" ):
                return visitor.visitImplies(self)
            else:
                return visitor.visitChildren(self)


    class CombinadorNotContext(FormulaContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LogicaParser.FormulaContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def formula(self):
            return self.getTypedRuleContext(LogicaParser.FormulaContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCombinadorNot" ):
                listener.enterCombinadorNot(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCombinadorNot" ):
                listener.exitCombinadorNot(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCombinadorNot" ):
                return visitor.visitCombinadorNot(self)
            else:
                return visitor.visitChildren(self)


    class ParensContext(FormulaContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LogicaParser.FormulaContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def formula(self):
            return self.getTypedRuleContext(LogicaParser.FormulaContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParens" ):
                listener.enterParens(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParens" ):
                listener.exitParens(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParens" ):
                return visitor.visitParens(self)
            else:
                return visitor.visitChildren(self)


    class CombinadorAndContext(FormulaContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LogicaParser.FormulaContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def formula(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LogicaParser.FormulaContext)
            else:
                return self.getTypedRuleContext(LogicaParser.FormulaContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCombinadorAnd" ):
                listener.enterCombinadorAnd(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCombinadorAnd" ):
                listener.exitCombinadorAnd(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCombinadorAnd" ):
                return visitor.visitCombinadorAnd(self)
            else:
                return visitor.visitChildren(self)


    class PredicadoContext(FormulaContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LogicaParser.FormulaContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def PRED(self):
            return self.getToken(LogicaParser.PRED, 0)
        def exp(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LogicaParser.ExpContext)
            else:
                return self.getTypedRuleContext(LogicaParser.ExpContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPredicado" ):
                listener.enterPredicado(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPredicado" ):
                listener.exitPredicado(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPredicado" ):
                return visitor.visitPredicado(self)
            else:
                return visitor.visitChildren(self)


    class QuantAllContext(FormulaContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LogicaParser.FormulaContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def VAR(self):
            return self.getToken(LogicaParser.VAR, 0)
        def formula(self):
            return self.getTypedRuleContext(LogicaParser.FormulaContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterQuantAll" ):
                listener.enterQuantAll(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitQuantAll" ):
                listener.exitQuantAll(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitQuantAll" ):
                return visitor.visitQuantAll(self)
            else:
                return visitor.visitChildren(self)


    class QuantExistContext(FormulaContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LogicaParser.FormulaContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def VAR(self):
            return self.getToken(LogicaParser.VAR, 0)
        def formula(self):
            return self.getTypedRuleContext(LogicaParser.FormulaContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterQuantExist" ):
                listener.enterQuantExist(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitQuantExist" ):
                listener.exitQuantExist(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitQuantExist" ):
                return visitor.visitQuantExist(self)
            else:
                return visitor.visitChildren(self)



    def formula(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = LogicaParser.FormulaContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 0
        self.enterRecursionRule(localctx, 0, self.RULE_formula, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 31
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1]:
                localctx = LogicaParser.QuantAllContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx

                self.state = 5
                self.match(LogicaParser.T__0)
                self.state = 6
                self.match(LogicaParser.VAR)
                self.state = 7
                self.match(LogicaParser.T__1)
                self.state = 8
                self.formula(7)
                pass
            elif token in [3]:
                localctx = LogicaParser.QuantExistContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 9
                self.match(LogicaParser.T__2)
                self.state = 10
                self.match(LogicaParser.VAR)
                self.state = 11
                self.match(LogicaParser.T__1)
                self.state = 12
                self.formula(6)
                pass
            elif token in [5]:
                localctx = LogicaParser.CombinadorNotContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 13
                self.match(LogicaParser.T__4)
                self.state = 14
                self.formula(4)
                pass
            elif token in [11]:
                localctx = LogicaParser.PredicadoContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 15
                self.match(LogicaParser.PRED)
                self.state = 16
                self.match(LogicaParser.T__6)
                self.state = 17
                self.exp()
                self.state = 22
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==2:
                    self.state = 18
                    self.match(LogicaParser.T__1)
                    self.state = 19
                    self.exp()
                    self.state = 24
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 25
                self.match(LogicaParser.T__7)
                pass
            elif token in [7]:
                localctx = LogicaParser.ParensContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 27
                self.match(LogicaParser.T__6)
                self.state = 28
                self.formula(0)
                self.state = 29
                self.match(LogicaParser.T__7)
                pass
            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 41
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,3,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 39
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
                    if la_ == 1:
                        localctx = LogicaParser.ImpliesContext(self, LogicaParser.FormulaContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_formula)
                        self.state = 33
                        if not self.precpred(self._ctx, 5):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 5)")
                        self.state = 34
                        self.match(LogicaParser.T__3)
                        self.state = 35
                        self.formula(6)
                        pass

                    elif la_ == 2:
                        localctx = LogicaParser.CombinadorAndContext(self, LogicaParser.FormulaContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_formula)
                        self.state = 36
                        if not self.precpred(self._ctx, 3):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 3)")
                        self.state = 37
                        self.match(LogicaParser.T__5)
                        self.state = 38
                        self.formula(4)
                        pass

             
                self.state = 43
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,3,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class ExpContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return LogicaParser.RULE_exp

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class VarContext(ExpContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LogicaParser.ExpContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def VAR(self):
            return self.getToken(LogicaParser.VAR, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVar" ):
                listener.enterVar(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVar" ):
                listener.exitVar(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar" ):
                return visitor.visitVar(self)
            else:
                return visitor.visitChildren(self)


    class ConstContext(ExpContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LogicaParser.ExpContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def CONST(self):
            return self.getToken(LogicaParser.CONST, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConst" ):
                listener.enterConst(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConst" ):
                listener.exitConst(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConst" ):
                return visitor.visitConst(self)
            else:
                return visitor.visitChildren(self)



    def exp(self):

        localctx = LogicaParser.ExpContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_exp)
        try:
            self.state = 46
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [9]:
                localctx = LogicaParser.VarContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 44
                self.match(LogicaParser.VAR)
                pass
            elif token in [10]:
                localctx = LogicaParser.ConstContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 45
                self.match(LogicaParser.CONST)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx



    def sempred(self, localctx:RuleContext, ruleIndex:int, predIndex:int):
        if self._predicates == None:
            self._predicates = dict()
        self._predicates[0] = self.formula_sempred
        pred = self._predicates.get(ruleIndex, None)
        if pred is None:
            raise Exception("No predicate with index:" + str(ruleIndex))
        else:
            return pred(localctx, predIndex)

    def formula_sempred(self, localctx:FormulaContext, predIndex:int):
            if predIndex == 0:
                return self.precpred(self._ctx, 5)
         

            if predIndex == 1:
                return self.precpred(self._ctx, 3)
         




